tests/ui/proc-macro/derive-helper-legacy-limits.stderr
error: cannot find attribute `empty_helper`
  --> $DIR/derive-helper-legacy-limits.rs:17:3
   |
LL | #[empty_helper]
   |   ^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

